@@ -81,7 +81,8 @@ enum class NetworkCommand : uint32_t
     PlayerInfo,
     RequestGameState,
     GameState,
-    Scripts,
+    ScriptsHeader,
+    ScriptsData,
     Heartbeat,
     Max,
     Invalid = static_cast<uint32_t>(-1),
